Regression: Smoothing a Mesh in Edit Mode Causes Segmentation Fault #102318

Closed
opened 2022-11-07 03:43:58 +01:00 by Brenden · 8 comments

System Information
Operating system: Ubuntu 22.04 (Wayland)
Graphics card: Nvidia GeForce RTX 3060

Blender Version
Broken: 3.4.0 Beta bba6d28942
Worked: 3.3
Caused by 12becbf0df

Short description of error
I am trying to smooth the vertices in a mesh on a sculpted hand. When I switch to Edit Mode and choose Mesh -> Weights -> Smooth, the entire Blender program crashes, and the console says "segmentation fault (core dumped).

Exact steps for others to reproduce the error

  • Open attached file
  • Select the character's hand mesh and tab into Edit Mode.
  • Open search menu. Type smooth and select the option Mesh -> Weights -> Smooth. The program should crash.
    #102318.blend
**System Information** Operating system: Ubuntu 22.04 (Wayland) Graphics card: Nvidia GeForce RTX 3060 **Blender Version** Broken: 3.4.0 Beta bba6d2894290 Worked: 3.3 Caused by 12becbf0df **Short description of error** I am trying to smooth the vertices in a mesh on a sculpted hand. When I switch to Edit Mode and choose `Mesh -> Weights -> Smooth`, the entire Blender program crashes, and the console says "segmentation fault (core dumped). **Exact steps for others to reproduce the error** - Open attached file - Select the character's hand mesh and tab into Edit Mode. - Open search menu. Type smooth and select the option `Mesh -> Weights -> Smooth`. The program should crash. [#102318.blend](https://archive.blender.org/developer/F13863242/T102318.blend)
Author

Added subscriber: @brendenahyde

Added subscriber: @brendenahyde
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. I can confirm the crash. I'll check

Stack trace:
blender.exe         :0x00007FF775EAACD0  blender::bke::NamedLegacyCustomDataProvider::try_get_for_read C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\attribute_access.cc:548
blender.exe         :0x00007FF775E838D0  blender::bke::attribute_accessor_functions::lookup<&`blender::bke::get_mesh_accessor_functions'::`2 C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\attribute_access_intern.hh:358
blender.exe         :0x00007FF775EA9540  blender::bke::AttributeAccessor::lookup C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\attribute_access.cc:797
blender.exe         :0x00007FF77674BDC0  vgroup_smooth_subset C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\object\object_vgroup.cc:1926
blender.exe         :0x00007FF776749480  vertex_group_smooth_exec C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\object\object_vgroup.cc:3609
blender.exe         :0x00007FF77601F810  wm_operator_invoke C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1455
blender.exe         :0x00007FF77601EEB0  wm_operator_call_internal C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1652
blender.exe         :0x00007FF776021E10  WM_operator_name_call_ptr_with_depends_on_cursor C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1891
blender.exe         :0x00007FF776916390  menu_search_exec_fn C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_template_search_menu.cc:956
blender.exe         :0x00007FF7768E8C90  ui_apply_but_funcs_after C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_handlers.c:1038
blender.exe         :0x00007FF7768F80B0  ui_popup_handler C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_handlers.c:11494
blender.exe         :0x00007FF77601E330  wm_handlers_do_intern C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3217
blender.exe         :0x00007FF77601D750  wm_handlers_do C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3337
blender.exe         :0x00007FF776023A80  wm_event_do_handlers C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3928
blender.exe         :0x00007FF776009D60  WM_main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:643
blender.exe         :0x00007FF775CF6BA0  main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\creator\creator.c:580
blender.exe         :0x00007FF7772D17B4  __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :0x00007FF9E1BB54D0  BaseThreadInitThunk
ntdll.dll           :0x00007FF9E25C4830  RtlUserThreadStart```
Hi, thanks for the report. I can confirm the crash. I'll check ```lines=10 Stack trace: blender.exe :0x00007FF775EAACD0 blender::bke::NamedLegacyCustomDataProvider::try_get_for_read C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\attribute_access.cc:548 blender.exe :0x00007FF775E838D0 blender::bke::attribute_accessor_functions::lookup<&`blender::bke::get_mesh_accessor_functions'::`2 C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\attribute_access_intern.hh:358 blender.exe :0x00007FF775EA9540 blender::bke::AttributeAccessor::lookup C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\attribute_access.cc:797 blender.exe :0x00007FF77674BDC0 vgroup_smooth_subset C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\object\object_vgroup.cc:1926 blender.exe :0x00007FF776749480 vertex_group_smooth_exec C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\object\object_vgroup.cc:3609 blender.exe :0x00007FF77601F810 wm_operator_invoke C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1455 blender.exe :0x00007FF77601EEB0 wm_operator_call_internal C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1652 blender.exe :0x00007FF776021E10 WM_operator_name_call_ptr_with_depends_on_cursor C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:1891 blender.exe :0x00007FF776916390 menu_search_exec_fn C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_template_search_menu.cc:956 blender.exe :0x00007FF7768E8C90 ui_apply_but_funcs_after C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_handlers.c:1038 blender.exe :0x00007FF7768F80B0 ui_popup_handler C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\editors\interface\interface_handlers.c:11494 blender.exe :0x00007FF77601E330 wm_handlers_do_intern C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3217 blender.exe :0x00007FF77601D750 wm_handlers_do C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3337 blender.exe :0x00007FF776023A80 wm_event_do_handlers C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:3928 blender.exe :0x00007FF776009D60 WM_main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:643 blender.exe :0x00007FF775CF6BA0 main C:\Users\prati\OneDrive\Desktop\BlenderOSP\blender\source\creator\creator.c:580 blender.exe :0x00007FF7772D17B4 __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FF9E1BB54D0 BaseThreadInitThunk ntdll.dll :0x00007FF9E25C4830 RtlUserThreadStart```
Pratik Borhade changed title from Smoothing a Mesh in Edit Mode Causes Segmentation Fault to Regression: Smoothing a Mesh in Edit Mode Causes Segmentation Fault 2022-11-07 05:29:54 +01:00
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

First bad commit 12becbf0df
@HooglyBoogly ^

First bad commit 12becbf0df @HooglyBoogly ^
Hans Goudey self-assigned this 2022-11-07 09:09:22 +01:00

This issue was referenced by 871c4380c4

This issue was referenced by 871c4380c4b5ba314bc978b60c3cca9299b0c53d
Hans Goudey removed their assignment 2022-11-07 09:50:59 +01:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Philipp Oeser self-assigned this 2022-11-08 18:23:54 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102318
No description provided.